# num-string

./: .gitignore  Cargo.toml  Makefile  README.md  main.c  makefile  tauri.conf.json
.cargo/: config.toml
langs/: english.txt  italian.txt  template.txt
src/: conversion.rs  graphics.rs  interface.rs  lib.rs  main.rs
src/frontend/: dark.css  index.html  light.css  main.js  style.css
src/langs/: english.txt  italian.txt  template.txt
