[package]
name = "num-string"
version = "2.1.0"
edition = "2021"

[lib]
name = "num_string"
crate-type = ["dylib"]

[dependencies]
clap = {version = "3.1.12", features = ["derive"]}
sscanf = "0.2.1"
clipboard = "0.5.0"

[target.'cfg(not(target_os = "android"))'.dependencies]
gtk4 = "0.4.7"

[target.'cfg(target_os="android")'.dependencies]
jni = { version = "0.5", default-features = false }
ndk = "0.6.0"
ndk-sys = "0.3.0"

