[package]
authors = ["TheDarkBug"]
edition = "2021"
license = "GPL-3"
name = "num-string"
repository = "https://github.com/TheDarkBug/num-string"
version = "3.1.0"

[lib]
crate-type = ["dylib"]
name = "num_string"

[dependencies]
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
clap = {version = "3.1.12", features = ["derive"]}
clipboard = "0.5.0"
sscanf = "0.3.1"

[target.'cfg(not(target_os = "android"))'.build-dependencies]
tauri-build = {version = "1.0.4"}

[target.'cfg(not(target_os = "android"))'.dependencies]
tauri = {version = "1.0.5", features = ["api-all"]}

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]

[target.'cfg(target_os="android")'.dependencies]
jni = {version = "0.19.0", default-features = false}
ndk = "0.7.0"
ndk-sys = "0.4.0"
